# libfriendship

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
concept/v1/linearity/: freq-dependent-delay.txt
concept/v1/pitch-shift/: Makefile  TestPitchShift1.cpp
concept/v2/: index.txt
concept/v3/: EQ.nb  LPF.nb  LPF_min_sq.nb  basics.txt  least_squares_lpf.py
concept/v4/: basics.txt
src/: automation.rs  client.rs  dispatch.rs  effect.rs  effect_node.rs  effect_send.rs  effect_tree.rs  effect_tree_renderer.rs  lib.rs  main.rs  multi_channel_partial_renderer.rs  partial.rs  partial_renderer.rs  phaser.rs  real.rs  renderer.rs  resman.rs  routing.rs  signal.rs  util.rs
src/client/: chanclient.rs  client.rs  mod.rs
src/effects/: effect.rs  mod.rs  sum.rs
src/render/: mod.rs  reference.rs  render_spec.rs  renderer.rs  sparkle.rs
src/render/reference/: mod.rs  nchannel_partial_renderer.rs  partial_renderer.rs  renderer.rs  tree_renderer.rs
src/render/tests/: approx_equal.rs  mod.rs  test_basic_sine.rs  test_channels.rs  test_const.rs  test_delay.rs  test_double_freq.rs  test_gate.rs  test_hpf.rs  test_lpf.rs  test_sine.rs  test_square.rs  test_tri.rs
src/resman/: mod.rs  resman.rs
src/routing/: adjlist.rs  effect.rs  graphwatcher.rs  mod.rs  nullable_int.rs  routegraph.rs  routetree.rs  sinusoid.rs
src/stdfx/: convolve.rs  delay.rs  divide.rs  f32constant.rs  fir.rs  hamming.rs  integrate.rs  minimum.rs  mod.rs  modulo.rs  modulo_one.rs  multiply.rs  passthrough.rs  unitsaw.rs
src/tree/: mod.rs  node.rs  send.rs  tree.rs
tests/: ext_input.rs  load_effect.rs  render_prim.rs
(+3 files in other folders)
