[package]
name = "libfriendship"
version = "0.0.1"
authors = ["Colin Wallace <wallacoloo@gmail.com>"]

license = "MIT"

[dependencies]
digest = {version="*", features=["std"]}
num = "0.1"
osc_address = "0.2"
osc_address_derive = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_osc = "0.4.1"
sha2 = "0.5"
url = "1.4"
url_serde = "0.2"

[dependencies.pwline]
git = "https://github.com/wallacoloo/rust-pwline.git"


[dev-dependencies]
tempdir = "0.3"
