[package]
name = "libfriendship"
version = "0.0.1"
authors = ["Colin Wallace <wallacoloo@gmail.com>"]

license = "MIT"

[dependencies]
byteorder = "1.0"
digest = {version="0.5", features=["std"]}
filebuffer = "0.2"
jagged_array = "0.2"
log = "0.3"
ndarray = "0.9"
num = "0.1"
osc_address = "0.2"
osc_address_derive = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_osc = "0.4.1"
sha2 = "0.5"
streaming-iterator = "0.1"
url = "1.4"
url_serde = "0.2"

[dev-dependencies]
tempdir = "0.3"

